Added about section

--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,20 @@
 
 
 /* Portfolio Item CSS */
+.body {
+    position: relative;
+}
 
-
+.color_div {
+    height: 800px;
+    margin: 1em;
+    border-radius: 1em;
+}
+#portrait {
+    display: block;
+    margin: auto;
+    width: 40%;
+}
 
 /* Footer CSS */
 
