--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,13 @@
 
 
 /* Portfolio Item CSS */
+h1, h2, h3, h4, h5, p, .caption {
+    font-family: 'Barlow Semi Condensed', sans-serif;
+    text-align: center;
+
+}
+
+
 .body {
     position: relative;
 }
@@ -22,7 +29,27 @@
     height: 800px;
     margin: 1em;
     border-radius: 1em;
+    background-color: white;
 }
+
+#header {
+    text-align: center;
+    padding-top: 50px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+#carousel {
+    display: block;
+    margin: auto;
+    width: 100%;
+    height: 500px;
+    padding: 100px;
+}
+.modal-photos {
+    height:200px;
+    width:200px;
+}
+
 #portrait {
     display: block;
     margin: auto;
@@ -36,7 +63,7 @@
 
 #projects {
     padding: 50px;
-    padding-top: 100px;
+    padding-top: 50px;
 }
 
 #contactme {
@@ -46,6 +73,8 @@
 .contact-info {
     text-align: center;
     padding:10px;
+
+
 }
 /* Footer CSS */
 
