--- a/css/style.css
+++ b/css/style.css
@@ -43,8 +43,10 @@ h1, h2, h3, h4, h5, p, .caption {
 }
 
 .modal-photos {
-    height:200px;
-    width:200px;
+    height: 200px;
+    width: 40%;
+    display: block;
+    margin: auto;
 }
 
 #portrait {
